--- a/SiteEnergiaR/WebContent/Formulario.html
+++ b/SiteEnergiaR/WebContent/Formulario.html
@@ -5,9 +5,34 @@
 		<link rel="stylesheet" href="CSS/hidrogenio.css">
 		<link rel="stylesheet" href="CSS/MenuHF.css">
 
+		<style>
+
+
+			.divForm {
+				width: 30%;
+				padding: 30px;
+				margin-bottom: 10px;
+				border-radius: 15px;
+			}
+
+			.formu {
+				display: inline-block;
+				width: 90px;
+				margin: 10px;
+				margin-left: -30px;
+			}
+
+			.botaoForm {
+				padding: 10 25 10 25;
+
+				margin-top:25px;
+			}
+
+
+		</style>
+
 	</head>
 	<body>
-
 
 		<!-- Slide Show -->
 		<div class="slideshow-container">
@@ -50,8 +75,7 @@
 
 		</div>
 
-
-	<!--Menu-->
+		<!--Menu-->
 		<div class="logo">
 			<img src="Imagem/Energy_logo.png">
 			<ul>
@@ -66,19 +90,38 @@
 				<li><a href="app.html">APP</a></li>
 			</ul>
 		</div>
-		<!-- Divisão em Branco - div abaixo do menu texto e imagem a direita-->
-		  <h1><center>Formulario</center></h1>
+
+		<h1><center>Deseja receber mais informações sobre essas energias Inovadoras?</center></h1>
+		<h2><center>Preencha as informações a baixo!</center></h2>
+
+		<center>
+			<div  class="trocaCor">
+
+				<div class="divForm" style="border: 1px solid black">
+
+						<label for="input1" class="formu">Nome: </label>
+						<input style="border-radius:10px; padding:3px" type="text" id="input1" size="30px"><br>
+
+						<label for="input2" class="formu">Telefone: </label>
+						<input style="border-radius:10px; padding:3px" type="text" id="input2" size="30px"><br>
+
+					<form>
+
+						<label for="input3" class="formu" required="true">Email: </label>
+						<input style="border-radius:10px; padding:3px" type="email" id="input3" size="30px"><br>
+
+						<input class="botaoForm" type="button" value="Enviar">
+
+					</form>
+
+				</div>
+
+			</div>
+	</center>
 
 
 
 
-		<div  class="trocaCor">
-
-
-		</div>
-
-		<footer>
-		</footer>
 
 
 		<script>
