--- a/SiteEnergiaR/WebContent/Formulario.html
+++ b/SiteEnergiaR/WebContent/Formulario.html
@@ -99,29 +99,24 @@
 
 				<div class="divForm" style="border: 1px solid black">
 
+					<form>
 						<label for="input1" class="formu">Nome: </label>
-						<input style="border-radius:10px; padding:3px" type="text" id="input1" size="30px"><br>
+						<input style="border-radius:10px; padding:3px" type="text" id="input1" size="30px" required><br>
 
 						<label for="input2" class="formu">Telefone: </label>
-						<input style="border-radius:10px; padding:3px" type="text" id="input2" size="30px"><br>
+						<input style="border-radius:10px; padding:3px" type="text" id="input2" size="30px" required><br>
 
-					<form>
 
 						<label for="input3" class="formu" required="true">Email: </label>
-						<input style="border-radius:10px; padding:3px" type="email" id="input3" size="30px"><br>
+						<input style="border-radius:10px; padding:3px" type="email" placeholder="nome@email.com" id="input3" size="30px" required><br>
 
-						<input class="botaoForm" type="button" value="Enviar">
-
+						<input class="botaoForm" type="submit" value="Enviar">
 					</form>
 
 				</div>
 
 			</div>
 	</center>
-
-
-
-
 
 
 		<script>
