--- a/SiteEnergiaR/WebContent/Ondas.html
+++ b/SiteEnergiaR/WebContent/Ondas.html
@@ -52,7 +52,7 @@
 		</div>
 
 	<div class="logo">
-		
+		<img src="Imagem/Energy_logo.png">
 		<ul>
 			<li><a href="Home.html">HOME</a></li>
 			<li><a href="Solar.html">SOLAR</a></li>
@@ -118,6 +118,10 @@
 	</div>
 
 	<footer>
+		<img id="logoFooter" src="Imagem/Energy_logo.png">
+				<p class="copy">
+						© Copyright MahaloEntertainment
+				</p>
 	</footer>
 
 	<script>
