--- a/SiteEnergiaR/WebContent/Eolica.html
+++ b/SiteEnergiaR/WebContent/Eolica.html
@@ -4,8 +4,8 @@
 		<title>Pagina Inicial</title>
 
 		<link rel="stylesheet" href="CSS/MenuHF.css">
-		<link rel="stylesheet" href="CSS/EolicaHF.css">
-
+		<link rel="stylesheet" href="CSS/Paginas.css">
+		
 	</head>
 
 	<body>
@@ -67,26 +67,40 @@
 		</ul>
 	</div>
 
-
+	<h1><center>Energia Geotérmica</center></h1>
 
 	<div  class="trocaCor">
-
+		<img id="Geotermica_1" src="Imagem\Geotermica_1.png" alt="Energia_Geotermica">
+		<p class="b1">
+			<b>
+				Definição:
+			</b>
+		</p>
+		<p class="a1">
+			A Energia Geotérmica “geo” significa Terra, e “therme” correspondente à temperatura,<br>
+			é a energia gerada pelo calor proveniente do interior da terra.
+		</p>
+		<p class="b1">
+			<b>
+				Funcionamento:
+			</b>
+		</p>
+		<p class="a1">
+			O processo de aproveitamento dessa energia é feito por grandes perfurações no solo,<br>
+			visto o calor existente abaixo da superfície terrestre, esse tipo de recurso energético<br>
+			é obtido por meio das rochas quentes (secas e úmidas) e o vapor quente proveniente do<br>
+			interior da terra. Considerado uma fonte renovável e limpa produz baixo impacto ambiental.
+		</p>
 	</div>
 
 
-	<div class="trocaCor2">
-
-	</div>
-
-	<div class="trocaCor">
 
 
 
-	</div>
 
-	<div class="trocaCor3">
 
-	</div>
+
+
 
 	<footer>
 	</footer>
